Fix spacing issue

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -52,7 +52,7 @@ body {
 
 .projecttab {
   margin: 0 20em;
-  margin-top: 5em;
+  margin-top: 4vh;
   width: 60em;
   opacity: 0;
 }
